2000-08-24  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/syscalls.list: Use __setrlimit as strong name.

	* posix/unistd.h: Move internal prototypes from here ...
	* include/unistd.h: ... to here.

	* sysvipc/sys/shm.h: Add const attribute to __getpagesize.

2000-08-24  Ulrich Drepper  <drepper@redhat.com>

	* grp/initgroups.c (initgroups): Deallocate groups array.
	Reported by jani.raiha@sonera.com [PR libc/1868].

	* sysdeps/s390/Dist: Add fpu/fenv_libc.h.
	* sysdeps/alpha/Dist: Likewise.

2000-08-23  Ulrich Drepper  <drepper@redhat.com>

	* crypt/md5-crypt.c (free_mem): Fix typo (constructor ->
	destructor).  Reported by Solar Designer <solar@false.com>.

	* iconv/gconv_conf.c (add_module): Remove some unneeded code to
	avoid adding double slashes.

2000-08-23  Jakub Jelinek  <jakub@redhat.com>

	* dirent/dirent.h (alphasort, versionsort): Move __attribute_pure__
	out of the __REDIRECT macro.

2000-08-23  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/vfscanf.c: Add %F format support.

	* locale/programs/ld-ctype.c (ctype_output): Make sure
	_NL_CTYPE_TRANSLIT_DEFAULT_MISSING_LEN and
	_NL_CTYPE_TRANSLIT_IGNORE_LEN are aligned.
	(ctype_read): Enable returning of wide character strings for reading
	transliteration information.

2000-08-23  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/i386/sys/io.h (_EXTERN_INLINE): Remove.
	Use static __inline instead of _EXTERN_INLINE.

	* misc/sys/select.h: Move prototypes of __select from here ...
	* include/sys/select.h: ... to here.

	* socket/sys/socket.h: Move prototypes of __send and __connect
	from here....
	* include/sys/socket.h: ... to here.

	* locale/programs/ld-ctype.c (ctype_read): Fix parameter for
	lr_error.

2000-08-23  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/sparc32/syscalls.list: Use
	__setrlimit as strong name. Takes only 2 arguments.

	* sysdeps/unix/sysv/linux/sh/syscalls.list: __syscall_setrlimit
	takes only 2 arguments.
