@@ -1,4 +1,4 @@
-/* Copyright (C) 1991, 94, 95, 96, 97, 98, 99 Free Software Foundation, Inc.
+/* Copyright (C) 1991,94,95,96,97,98,99,2000 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -130,3 +130,11 @@ getbuffer (void)
 
   return result;
 }
+
+
+static void
+free_mem (void)
+{
+  free (static_buf);
+}
+text_set_element (__libc_subfreeres, free_mem);
