@@ -1,3 +1,12 @@
+2000-08-24  Ulrich Drepper  <drepper@redhat.com>
+
+	* resolv/res_hconf.c (free_mem): Remove not needed if.
+
+	* time/tzset.c (free_mem): New function.
+	* string/strsignal.c (free_mem): New function.
+	* inet/inet_ntoa.c (free_mem): New function.
+	* sunrpc/clnt_perr.c (free_mem): New function.
+
 2000-08-24  Andreas Jaeger  <aj@suse.de>
 
 	* sysdeps/unix/syscalls.list: Use __setrlimit as strong name.
